[package]
name = "sweater_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.39"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
base64 = "0.22.1"
regex = "1.11.1"
mime_guess = "2.0.5"