[package]
name = "sweater_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
stylist = { version = "0.13.0", features = ["yew"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
gloo = "0.11.0"
gloo-net = "0.5"
serde = "1.0.218"
serde_json = "1.0.139"
wasm-bindgen-futures = "0.4.50"
